# imm-pdaf

./: Cargo.toml  main.ipynb
benches/: benchmarks.rs
json/: data_for_ekf.json  data_for_imm.json  data_for_imm_pda.json  data_joyride.json
src/: consistency.rs  data_parsing.rs  lib.rs  main.rs  mat_reader.rs  mixture.rs  pdaf.rs  plotting.rs  simulator.rs  state_estimator.rs  visualization.rs
src/state_estimator/: ekf.rs  imm.rs  models.rs
src/state_estimator/models/: dynamic.rs  measurement.rs
src/visualization/: double_slide_bar.rs
