[package]
name = "imm-pdaf"
version = "0.1.0"
authors = ["Odin <odin@severinsen.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matfile = "0.2.1"
itertools = "0.10.0"
gnuplot = "^0.0.34"
nalgebra = "0.19.0"
numpy = "0.7.0"
pyo3 = "0.8.2"
inline-python = "0.3.1"
nalgebra-numpy = "0.2.0"
