[package]
name = "imm-pdaf"
version = "0.1.0"
authors = ["Odin <odin@severinsen.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
nalgebra = "0.32.3"
criterion = "0.5.1"
serde = { version = "1.0.190", features = ["serde_derive", "derive"] }
serde_json = "1.0.107"
anyhow = "1.0.75"
eframe = "0.23.0"
egui_plot = "0.23.0"
tokio = { version = "1.33.0", features = ["full"] }

[[bench]]
name = "benchmarks"
harness = false
